Created backend, some frontend

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="container">
+    <form id="dataForm">
+        <input type="text" id="itemName" placeholder="Item Name">
+        <input type="number" id="itemQuantity" placeholder="Item Quantity">
+        <button type="submit" id="myButton">Submit</button>
+    </form>
+  
+    <div id="dataDisplay"></div>
+  </div>
+
   <script src="app.js"></script>
 </body>
 </html>
