spells no workie

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <form id="dataForm">
+    <form id="itemForm">
         <input type="text" id="itemName" placeholder="Item Name">
         <input type="number" id="itemQuantity" placeholder="Item Quantity">
         <button type="submit" id="myButton">Submit</button>
@@ -16,7 +16,19 @@
   
     <div id="dataDisplay"></div>
   </div>
-
+  <div class="spellForm">
+    <form id="spellForm">
+      <input type="text" id="spellName" placeholder="Spell Name">
+      <input type="text" id="spellLevel" placeholder="Spell Level">
+      <input type="text" id="spellSchool" placeholder="Spell School">
+      <input type="text" id="spellCastingTime" placeholder="Spell Casting Time">
+      <input type="text" id="spellRange" placeholder="Spell Range">
+      <input type="text" id="spellComponents" placeholder="Spell Components">
+      <input type="text" id="spellDuration" placeholder="Spell Duration">
+      <input type="text" id="spellDescription" placeholder="Spell Description">
+      <button type="submit" id="spellButton">Submit</button>
+    </form>
+  </div>
   <script src="app.js"></script>
 </body>
 </html>
